--- a/driven-forms-example-ngmodule-classic/tsconfig.json
+++ b/driven-forms-example-ngmodule-classic/tsconfig.json
@@ -8,6 +8,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "strictPropertyInitialization": true,
     "skipLibCheck": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
