--- a/driven-forms-example/angular.json
+++ b/driven-forms-example/angular.json
@@ -8,7 +8,9 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "standalone": false
+          "standalone": false,
+          "type": "component"
+
         }
       },
       "root": "",
